environments/staging/my-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-service
  namespace: prod
spec:
  ports:
    - port: 80
      targetPort: 80
      name: http
  selector:
    app: react
